Issue #3075756 by stefan.korn, EnnoKirchhoff, BramDriesen, Kingdutch: Overall score indicator does not show color

--- a/css/yoast_seo.css
+++ b/css/yoast_seo.css
@@ -418,7 +418,7 @@ div.form-item-yoast-seo-und-focus-keyword {
   background: #77b227;
 }
 
-.overallScore.ok .score_circle {
+.overallScore.okay .score_circle {
   background: #f49a00;
 }
 
